--- a/css/Login.css
+++ b/css/Login.css
@@ -51,7 +51,7 @@ header .logo{
     width: 100%;
     height: 80%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 .content_banner_account{
     position: relative;
@@ -65,6 +65,17 @@ header .logo{
     display: grid;
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.05);
 }
+.col:first-child{
+    position: relative;
+    right: 10px;
+}
+form{
+    justify-content: center;
+    align-items: center;
+    display: grid
+}
+
+
 .text_account p{
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
@@ -72,7 +83,7 @@ header .logo{
     color: #000000;
     text-align: center;
 }
-.content_banner_account input{
+.content_account input{
     width: 274px;
     height: 34px;
     border: 1px solid #000000;
