--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,39 @@ header .logo{
 header input, label, span::before{
     display: none;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    display: none;
+    position: absolute;
+    background-color: #FEFDFD;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-top: 20px;
+    right: 0;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.sticky .dropdown-content a:hover{
+    color: white;
+    background: rgba(0, 0, 0, 0.55);
+}
+.sticky .dropdown-content a{
+    background: rgba(0, 0, 0, 0.55);
+}
+.show {
+    display:block;
+    float: right;
+}
 #menu__toggle {
     opacity: 0;
 }
